--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
+    "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "redoc": "^2.1.3",
@@ -65,6 +66,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
